<resources>
    <string name="app_name">BaguioCityGuideApp</string>
    <string name="splashButtonText">Explore</string>
    <string name="splashText">Welcome!\nHop in and explore\nthe great city of Baguio!</string>
    <string name="mainHeader">Explore the City of Pines</string>
    <string name="recyclerView_text_Holder">Category name here</string>
    <string name="recommendations_text">Coffee shop recommendations here</string>
    <string name="coffeeHeader">Check out these local coffee shops!</string>
    <string name="baguio_city_emblem">Baguio City Emblem</string>
    <string name="coffee_shops">Coffee Shops</string>
    <string name="coffee_shop_image">Coffee Shop Image</string>
    <string name="recommended_places">Places</string>
    <string name="recommended_image">Places Image</string>
    <string name="restaurants">Restaurants</string>
    <string name="categoriesHeaderText">Explore these places!</string>
    <string name="health">Healthy Choices</string>
    <string name="shoppingCenters">Shopping Centers</string>
    <string name="coffeeShop1">Beans Talk Cafe Baguio</string>"
    <string name="coffeeShop1Description">Coffee Shop description 1</string>"
    <string name="coffeeShop2">Choco-late de Batirol</string>
    <string name="coffeeShop2Description">Coffee Shop description 2</string>
    <string name="coffeeShop3">Sa Baguio Coffee Shop</string>
    <string name="coffeeShop3Description">Coffee Shop description 3</string>
    <string name="coffeeShop4">Coffee Shop name 4</string>
    <string name="coffeeShop4Description">Coffee Shop description 4</string>
    <string name="coffee_shop_text">coffee shop text</string>
    <string name="coffeeShopHeader">Check out these Coffee Shops!</string>
    <string name="coffeeimage1">Beans Talk Coffee Shop</string>
    <string name="coffeeimage2">Choco-late de Batirol</string>
    <string name="coffeeimage3">Sa Baguio Coffee Shop</string>
    <string name="restaurantHeader">Hungry? Try these restaurants!</string>
    <string name="restaurant1">Vizco\'s Restaurant</string>
    <string name="restaurant2">Red Rustikz</string>
    <string name="restaurant3">Oh My Gulay!</string>
    <string name="kidsHeader">Bring your kids to these places!</string>
    <string name="kidsplace">Kid-Friendly Places</string>
    <string name="kids1">Burnham Park Childrens\' Park</string>
    <string name="kids2">Baguio City Public Library</string>
    <string name="kids3">Baguio City Museum</string>
    <string name="healthDestinationHeader">Get your health products and services with these awesome choices!</string>
    <string name="restaurantimage1">restaurant image 1</string>
    <string name="health1">North Haven Spa</string>
    <string name="health2">Human Nature</string>
    <string name="health3">Tingi Station</string>
    <string name="healthimage1">Health Image 1</string>
    <string name="healthimage2">Health Image 2</string>
    <string name="healthimage3">Health Image 3</string>
    <string name="kidsimage1">Kids Image 1</string>
    <string name="kidsimage2">Kids Image 2</string>
    <string name="kidsimage3">Kids Image 3</string>
    <string name="shoppingHeader">Shop locally in these places!</string>
    <string name="shopimage1">Shop 1</string>
    <string name="shop1">Porta Vaga Mall</string>
    <string name="shopimage2">Shop 2</string>
    <string name="shop2">Abanao Square Mall</string>
    <string name="shopimage3">Shop 3</string>
    <string name="shop3">Baguio Center Mall</string>
    <string name="pvmallText">The Porta Vaga Mall is a small shopping destination close to the Baguio Cathedral, it stands along the famous Session Road and is a popular spot for a both the young and old. It hosts a lot of local merchants known throughout Baguio City. It has a great view of Session Road too.</string>
    <string name="centermallText">The Baguio Center Mall is one of the oldest shopping destinations in the city. It has been a go to of many residents. Much like other public areas in the city, it is located near the public market and is close to some of the biggest universities in the city.</string>
    <string name="abanaoText">Abanao Square is a place where locals visit before heading home after work, its proximity to the Baguio City Public Market makes it suitable to catch up with friends or relatives before heading home together. It has a pharmacy, a bookstore, and some restaurants. Try to visit this place to experience the Baguio local scene.</string>
    <string name="coffee1">Beanstalk Baguio</string>
    <string name="coffee2">Chocolatte de Batirol</string>
    <string name="coffee3">Sa Baguio Coffee Stop</string>
    <string name="beanstalkText">A small local cafe in the heart of Baguio City, it boasts a great view of the Baguio Session Road. This place can be quite busy at times but the servings and the experience is worth the wait.</string>
    <string name="batirolText">A well-known local shop located in Camp John Hay, this place will surely give you the Baguio "feels". Try their signature drinks and experience the warmth Baguio has to offer.</string>
    <string name="sabaguioText">A small local coffee shop located in Session Road, their place may be small but their flavors are big. If you\'re looking for a quick coffee stop, this place is your go to.</string>
    <string name="parkText">The Children\'s Park has been around for decades, locals have fond memories of this place. This park is perfect for children as it hosts a lot of activities that will ignite a child\'s energy levels. It is a perfect place for a relaxing wholesome family experience where both children and grown-ups can feel young.</string>
    <string name="libraryText">The Baguio City Public Library has been refurbished and is buzzing with activity nowadays, there are many events in this place every weekend, it\'s not just for kids but for every age as well. Here you can browse through the wide selection of reading materials that relate to the rich history of the city of Baguio. Experience the Public Library today and discover a side of Baguio preserved in time.</string>
    <string name="museumText">The Baguio City Museum is home to some of the rarest artifacts in the country, this classic landmark in Baguio is a must go to place if you want to learn more about the history of the Cordilleras. Even adults may find this place revitalizing.</string>
    <string name="vizcosText">This restaurant recently underwent a renovation and now they\'re open again! The restaurant is originally located along Session Road and is a main stay during the festival season. For Baguio goers, this restaurant has a lot to offer and they are just too good to pass up on. So try their entrees and desserts now!</string>
    <string name="rustikzText">A local restaurant which isn\'t well known but once you try their offerings, you will wish they had more shops open! For such a small places, this restaurant packs some serious flavor! You just have to try their meals for a complete Baguio experience.</string>
    <string name="gulayText">Another local restaurant which gets both locals and tourists amazed. In this restaurant you will be immersed in the local culture while having the best light meals to be offered in the city. It sits atop Session Road yet has a great view of the mountains, which means you\'ll get to see another side of Baguio minus the buildings. Try them out now!</string>
    <string name="northHavenText">A trip to the spa can inspire you to be the best you can be. With this spa destination, your stress and worries will fade away. They are located along Session Road but they\'re ambience will take you away from the busy city life.</string>
    <string name="humanNatureText">For the health conscious individuals, you have to try their products and see the difference, located inside the Porta Vaga Mall, Human Nature continues to supply wonderful health products that are guaranteed safe for you and your family.</string>
    <string name="tingiText">A local initiative that brings eco awareness to the next level! They have all the home products you can think of and you won\'t have to worry about polluting the environment with those extra plastic bottles. So bring your reusable containers and head over to their shops!</string>
</resources>