<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coffeeShopHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primaryContainer"
        android:padding="20dp"
        android:text="@string/coffeeShopHeader"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coffee_scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeShopHeader">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surfaceBright"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coffeeShop1Image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@color/md_theme_tertiaryFixedDim"
                android:contentDescription="@string/coffeeimage1"
                android:padding="4dp"
                app:srcCompat="@drawable/coffeecupimage" />

            <TextView
                android:id="@+id/coffeeShop1Text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/coffeeShop1"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coffeeShop2Image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@color/md_theme_tertiaryFixedDim"
                android:contentDescription="@string/coffeeimage2"
                android:padding="4dp"
                app:srcCompat="@drawable/coffeecupimage" />

            <TextView
                android:id="@+id/coffeeShop2Text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/coffeeShop2"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/coffeeShop3Image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@color/md_theme_tertiaryFixedDim"
                android:contentDescription="@string/coffeeimage3"
                android:padding="4dp"
                app:srcCompat="@drawable/coffeecupimage" />

            <TextView
                android:id="@+id/coffeeShop3Text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/coffeeShop3"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>