<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:id="@+id/introScreen"
    android:background="@color/md_theme_secondaryContainer">

    <ImageView
        android:id="@+id/cityEmblem"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/baguio_city_emblem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/baguio_emblem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primaryContainer"
        android:padding="15dp"
        android:text="@string/splashText"
        android:textAlignment="center"
        android:textColor="@color/md_theme_scrim"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/splashButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEmblem"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/splashButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/md_theme_tertiary_mediumContrast"
        android:text="@string/splashButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

</androidx.constraintlayout.widget.ConstraintLayout>